Implement some SonarCloud fixes