@@ -18,7 +18,6 @@
 
 package com.tamrielnetwork.vitalhome.utils.commands;
 
-import com.google.common.collect.ImmutableMap;
 import com.tamrielnetwork.vitalhome.VitalHome;
 import com.tamrielnetwork.vitalhome.utils.Chat;
 import org.bukkit.Location;
@@ -38,6 +37,10 @@ public class CmdSpec {
 
 	private static final VitalHome main = JavaPlugin.getPlugin(VitalHome.class);
 	private static final List<UUID> onActiveDelay = new ArrayList<>();
+	private CmdSpec() {
+
+		throw new IllegalStateException("Utility class");
+	}
 
 	public static void doDelay(@NotNull CommandSender sender, Location location) {
 
@@ -50,7 +53,7 @@ public class CmdSpec {
 			}
 			onActiveDelay.add(senderPlayer.getUniqueId());
 			String timeRemaining = String.valueOf(main.getConfig().getLong("delay.time"));
-			Chat.sendMessage(senderPlayer, ImmutableMap.of("%countdown%", timeRemaining), "countdown");
+			Chat.sendMessage(senderPlayer, java.util.Map.of("%countdown%", timeRemaining), "countdown");
 			new BukkitRunnable() {
 
 				@Override
